First reasonable version. Using Java 9 class path.